--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.5",
     "express": "^4.14.1",
     "mongoose": "^4.8.5",
     "request": "^2.79.0"
