--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.1.5",
+    "body-parser": "^1.17.1",
     "express": "^4.14.1",
     "mongoose": "^4.8.5",
     "mongoose-cache": "^0.1.5",
